Fixed top section styling alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -77,6 +77,7 @@
         display: flex;
         flex-direction: row;
         margin-right: 18px;
+        padding: 0 8px;
         .dice-icon {
           width: 24px;
         }
